--- a/hosted/style.css
+++ b/hosted/style.css
@@ -50,7 +50,7 @@ nav:nth-child(1) {
 .domoForm {
     border: 2px solid #338acc;
     height: 35px;
-    width: 700px;
+    width: 960px;
     margin-top:0px;
     padding-top:10px;
     background-color: #55acee;
@@ -69,6 +69,7 @@ nav:nth-child(1) {
 
 .domoForm input[type=text] {
     float:left;
+    margin-left: 18px;
 }
 
 .makeDomoSubmit {
@@ -246,8 +247,18 @@ h3.domoName {
 
 h3.domoAge {
     float:right;
-    text-align: left;
+    text-align: right;
     width: 100px;
+    font-weight: bold;
+    padding-right: 40px;
+    font-size: 1.5em;
+}
+
+h3.domoPersonality {
+    margin-top: 0px;
+    float:right;
+    text-align: right;
+    width: 300px;
     font-weight: bold;
     padding-right: 40px;
     font-size: 1.5em;
